force-app/main/default/objects/AutomatedEmailNotifications__c/AutomatedEmailNotifications__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This CS will contain information used by Scheduled APEX jobs such as email template Ids, timeframe metrics, and other data necessary to send scheduled emails.</description>
    <label>Automated Email Notifications</label>
</CustomObject>