force-app/main/default/objects/AutomatedEmailNotifications__c/fields/Account_Types__c.field-meta.xml
<CustomField>
    <fullName>Account_Types__c</fullName>
    <description>Used for the Mobile Expiration email process, this is used to choose which Accounts will be included on the initial scope pull</description>
    <label>Account Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>