force-app/main/default/objects/AutomatedEmailNotifications__c/fields/cc_Email__c.field-meta.xml
<CustomField>
    <fullName>cc_Email__c</fullName>
    <description>This field is to copy other individuals on the email notification.</description>
    <inlineHelpText>This field is to copy other individuals on the email notification.</inlineHelpText>
    <label>cc Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>