force-app/main/default/objects/AutomatedEmailNotifications__c/fields/Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_ID__c</fullName>
    <description>This field is used by the Scheduled APEX job to determine which Email Template will be used for this task.  An administrator will need to create an email template, determine the recordId for that template, and paste that in this field.</description>
    <label>Email Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>