force-app/main/default/objects/AutomatedEmailNotifications__c/fields/Expiration_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Field_API_Name__c</fullName>
    <description>Used by the Mobile and Account expiration jobs, this field is accessible from the Truck_for_Store object and used to determine what value to test against.</description>
    <label>Expiration Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>