force-app/main/default/objects/AutomatedEmailNotifications__c/fields/Expiration_Sent__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used specifically by the Mobile Expiration process, this field indicates to the process to include/exclude the Truck__c.IsExpirationEmailSent__c field.</description>
    <label>Expiration Sent</label>
    <type>Checkbox</type>
</CustomField>