force-app/main/default/objects/AutomatedEmailNotifications__c/fields/Expiration_Sent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Sent_API_Name__c</fullName>
    <description>Used by the Mobile and Account expiration jobs, this field is accessible from the Truck_for_Store object and used to determine if the email referenced was sent or not.</description>
    <label>Expiration Sent API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>