force-app/main/default/objects/AutomatedEmailNotifications__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox is used by the Scheduled APEX job to see if the email job is to be processed.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>