force-app/main/default/objects/AutomatedEmailNotifications__c/fields/OrgWide_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>OrgWide_Email_Id__c</fullName>
    <description>Used to specify if an Organization Wide Email Id will be used for this email process</description>
    <label>OrgWide Email Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>