force-app/main/default/objects/AutomatedEmailNotifications__c/fields/Team_Member_Roles__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Roles__c</fullName>
    <description>Used by the Truck Mobile Expiration process, this is a pipe-delimited list of Account Team Roles to be included in the email.</description>
    <label>Team Member Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>