force-app/main/default/objects/AutomatedEmailNotifications__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <description>This number field is used by the Scheduled APEX job to determine the timeframe of which to process the email task by.  The measure of this field is in DAYS.</description>
    <label>Timeframe</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>