force-app/main/default/objects/AutomatedEmailNotifications__c/fields/Timeframe_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_Criteria__c</fullName>
    <description>Options available to enter in this field are &lt; &lt;= = =&gt; &gt;.  This criteria is applied against the Timeframe field.</description>
    <label>Timeframe Criteria</label>
    <length>2</length>
    <type>Text</type>
</CustomField>