force-app/main/default/objects/AutomatedEmailNotifications__c/listViews/Email_Jobs.listView-meta.xml
<ListView>
    <fullName>Email_Jobs</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Account_Types__c</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Expiration_Sent__c</columns>
    <columns>OrgWide_Email_Id__c</columns>
    <columns>Team_Member_Roles__c</columns>
    <columns>Timeframe_Criteria__c</columns>
    <columns>Timeframe__c</columns>
    <columns>Expiration_Field_API_Name__c</columns>
    <columns>Expiration_Sent_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Email Jobs</label>
</ListView>